// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import/Export Read sample and ensure results match sample.txt {"addLineBreaksToImproveDiffs": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=16
# Data:
__DATA__
Big Apple$9
New York$8
ap#6;<2
big a#10;<5
fun journey$7wal#f;<7
journalism$tic$2$3s$$2eyer$2man$2e#30;<2$4ste#2e;<ing$3$3vialit#1e;<2$4wly$$2yfuller$st$4ness$4$3
lessne#44;<2$4ous#49;<3ridde#30;<2er$$i#33;<3od#8;<3stic#f;<4$3
lifted$r$2i#33;<s$$3ong w#1f;<6
talke#5a;<i#33;<s$$4
walk#62;<4
"
`;

exports[`Import/Export Read sample and ensure results match sample.txt {} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=16
# Data:
__DATA__
B
i
g Apple$9
N
e
w York$8
a
p#6;<2
b
i
g a#10;<5
f
u
n journey$7wal#f;<7
j
o
urnalism$tic$2$3s$$2eyer$2man$2e#30;<2$4ste#2e;<ing$3$3vialit#1e;<2$4wly$$2yfuller$st$4ness$4$3
lessne#44;<2$4ous#49;<3ridde#30;<2er$$i#33;<3od#8;<3stic#f;<4$3
l
i
fted$r$2i#33;<s$$3
o
ng w#1f;<6
t
a
lke#5a;<i#33;<s$$4
w
a
lk#62;<4
"
`;

exports[`Import/Export Read sample and ensure results match sample2.txt {"addLineBreaksToImproveDiffs": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=16
# Data:
__DATA__
\\\\# comment\\\\, not stored$9<9<3
\\\\$$
Big Apple$9
New York$8
\\\\[braces\\\\]$8
\\\\\\\\\\\\ single backslash$9<8\\\\\\\\\\\\ double backsla#3a;<9<6\\\\\\\\\\\\ triple backsl#4a;<9<8
ap#1a;<2
big a#59;<5
fun journey$7wal#23;<7
journalism$tic$2$3s$$2eyer$2man$2e#79;<2$4ste#77;<ing$3$3vialit#67;<2$4wly$$2yfuller$st$4ness$4$3
lessne#8d;<2$4ous#92;<3ridde#79;<2er$$i#7c;<3od#1c;<3stic#23;<4$3
lifted$r$2i#7c;<s$$3ong w#68;<6
re\\\\-w#21;<4
special characters \\\\\`\\\\~\\\\!\\\\@\\\\#\\\\$\\\\%\\\\^\\\\&\\\\*\\\\(\\\\)\\\\_\\\\-\\\\+\\\\=\\\\[\\\\]\\\\\\\\\\\\\\\\{\\\\}\\\\|\\\\;\\\\'\\\\:\\\\\\"\\\\,\\\\.\\\\/\\\\<\\\\>\\\\?$9<9<9<9<9<6
talke#a3;<i#7c;<s$$4
walk#e0;<3ork\\\\'#8e;<i#7c;<s$$4
"
`;

exports[`Import/Export Read sample and ensure results match sample2.txt {} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=16
# Data:
__DATA__
\\\\#
 
comment\\\\, not stored$9<9<3
\\\\$$
B
i
g Apple$9
N
e
w York$8
\\\\[
b
races\\\\]$8
\\\\\\\\\\\\
 
single backslash$9<8
\\\\\\\\\\\\
 double backsla#3a;<9<6\\\\\\\\\\\\ triple backsl#4a;<9<8
a
p#1a;<2
b
i
g a#59;<5
f
u
n journey$7wal#23;<7
j
o
urnalism$tic$2$3s$$2eyer$2man$2e#79;<2$4ste#77;<ing$3$3vialit#67;<2$4wly$$2yfuller$st$4ness$4$3
lessne#8d;<2$4ous#92;<3ridde#79;<2er$$i#7c;<3od#1c;<3stic#23;<4$3
l
i
fted$r$2i#7c;<s$$3
o
ng w#68;<6
r
e
\\\\-w#21;<4
s
p
ecial characters \\\\\`\\\\~\\\\!\\\\@\\\\#\\\\$\\\\%\\\\^\\\\&\\\\*\\\\(\\\\)\\\\_\\\\-\\\\+\\\\=\\\\[\\\\]\\\\\\\\\\\\\\\\{\\\\}\\\\|\\\\;\\\\'\\\\:\\\\\\"\\\\,\\\\.\\\\/\\\\<\\\\>\\\\?$9<9<9<9<9<6
t
a
lke#a3;<i#7c;<s$$4
w
a
lk#e0;<3
o
rk\\\\'#8e;<i#7c;<s$$4
"
`;

exports[`Import/Export serialize DAWG {"addLineBreaksToImproveDiffs": false, "base": 10, "optimizeSimpleReferences": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\$3
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#58;<3u#56;<3
eol \\\\\\\\n$3w \\\\$$4scape #45;<7
fun journey$7wal#27;<7
journalism$tic$2$3s$$2eyer$2man$2e#104;<2$4ste#102;<i#60;<$3vialit#86;<2$4wly$$2yfuller$st$4ness$4$3
lessn#121;<$4ou#126;<2ridde#104;<2er$$i#60;<3od#8;<3stic#27;<4$3
lift#58;<3ong w#87;<6
ref \\\\#$5
t#63;<
wa#64;<2
"
`;

exports[`Import/Export serialize DAWG {"addLineBreaksToImproveDiffs": false, "base": 10, "optimizeSimpleReferences": true} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\$3
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#58;<3u#56;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8
fun journey$7walk$8
journalism$tic$2$3s$$2eyer$2man$2en$3$4ster$2i#60;<$3viality$3$4wly$$2yfuller$st$4ness$4$3
lessn#126;<$4ou#131;<2ridden$3er$$i#60;<3ode$4stick$5$3
lift#58;<3ong w#88;<6
ref \\\\#$5
t#63;<
wa#64;<2
"
`;

exports[`Import/Export serialize DAWG {"addLineBreaksToImproveDiffs": false, "base": 10} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\$3
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#58;<3u#56;<3
eol \\\\\\\\n$3w \\\\$$4scape #45;<7
fun journey$7wal#27;<7
journalism$tic$2$3s$$2eyer$2man$2e#104;<2$4ste#102;<i#60;<$3vialit#86;<2$4wly$$2yfuller$st$4ness$4$3
lessn#121;<$4ou#126;<2ridde#104;<2er$$i#60;<3od#8;<3stic#27;<4$3
lift#58;<3ong w#87;<6
ref \\\\#$5
t#63;<
wa#64;<2
"
`;

exports[`Import/Export serialize DAWG {"base": 10, "optimizeSimpleReferences": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
B
i
g Apple$8
r
aces\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
N
e
w York$7
u
mbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
\\\\\\\\\\\\
\\\\\\\\\\\\
\\\\\\\\\\\\$3
a
p#6;<r
row \\\\<$7
b
i
g a#5;<4
u
rned$r$2ing$3s$$4
c
h
alk#58;<3u#56;<3
e
o
l \\\\\\\\n$3w \\\\$$4
s
cape #45;<7
f
u
n journey$7wal#27;<7
j
o
urnalism$tic$2$3s$$2eyer$2man$2e#104;<2$4ste#102;<i#60;<$3vialit#86;<2$4wly$$2yfuller$st$4ness$4$3
lessn#121;<$4ou#126;<2ridde#104;<2er$$i#60;<3od#8;<3stic#27;<4$3
l
i
ft#58;<3
o
ng w#87;<6
r
e
f \\\\#$5
t#63;<
w
a#64;<2
"
`;

exports[`Import/Export serialize DAWG {"base": 10, "optimizeSimpleReferences": true} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
B
i
g Apple$8
r
aces\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
N
e
w York$7
u
mbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
\\\\\\\\\\\\
\\\\\\\\\\\\
\\\\\\\\\\\\$3
a
p#6;<r
row \\\\<$7
b
i
g a#5;<4
u
rned$r$2ing$3s$$4
c
h
alk#58;<3u#56;<3
e
o
l \\\\\\\\n$3w \\\\$$4
s
cape \\\\\\\\\\\\$8
f
u
n journey$7walk$8
j
o
urnalism$tic$2$3s$$2eyer$2man$2en$3$4ster$2i#60;<$3viality$3$4wly$$2yfuller$st$4ness$4$3
lessn#126;<$4ou#131;<2ridden$3er$$i#60;<3ode$4stick$5$3
l
i
ft#58;<3
o
ng w#88;<6
r
e
f \\\\#$5
t#63;<
w
a#64;<2
"
`;

exports[`Import/Export serialize DAWG 10 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\$3
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#58;<3u#56;<3
eol \\\\\\\\n$3w \\\\$$4scape #45;<7
fun journey$7wal#27;<7
journalism$tic$2$3s$$2eyer$2man$2e#104;<2$4ste#102;<i#60;<$3vialit#86;<2$4wly$$2yfuller$st$4ness$4$3
lessn#121;<$4ou#126;<2ridde#104;<2er$$i#60;<3od#8;<3stic#27;<4$3
lift#58;<3ong w#87;<6
ref \\\\#$5
t#63;<
wa#64;<2
"
`;
